syntax = "proto3";

package runnerpb;

service Runner {
    rpc Ping (PingRequest) returns (PingReply) {
    }

    rpc GetConfiguration (GetConfigurationRequest) returns (GetConfigurationReply) {
    }

    rpc GetClusterRoles (GetClusterRolesRequest) returns (GetClusterRolesReply) {
    }

    rpc DeployApplication (DeployApplicationRequest) returns (DeployApplicationReply) {
    }

    rpc DeleteApplication (DeleteApplicationRequest) returns (DeleteApplicationReply) {
    }

    rpc GetApplicationStatus (GetApplicationStatusRequest) returns (GetApplicationStatusReply) {
    }

    rpc GetApplicationLogs (GetApplicationLogsRequest) returns (stream GetApplicationLogsReply) {
    }
}

message PingRequest {
    int64 time = 1;
}

message PingReply {
    int64 time = 1;
}

message GetConfigurationRequest {
}

message GetConfigurationReply {
    repeated string externalIps = 2;
}

message GetClusterRolesRequest {
}

message GetClusterRolesReply {
    repeated ClusterRole roles = 1;
}

message ClusterRole {
    string name = 1;
}

enum ApplicationStatus {
    UNKNOWN = 0;
    DEPLOYING = 1;
    RUNNING = 2;
    CRASHED = 3;
    FAILED = 4;
}

message Application {
    string id = 1;
    string deploymentId = 2;
    string name = 3;
    string image = 4;
    uint32 replicas = 5;
    repeated string domains = 6;
    map<string, string> environment = 7;
    repeated string roles = 8;
}

message DeployApplicationRequest {
    Application application = 1;
}

message DeployApplicationReply {
}

message DeleteApplicationRequest {
    string id = 1;
    string name = 2;
}

message DeleteApplicationReply {
}

message GetApplicationLogsRequest {
    string id = 1;
    string name = 2;
}

message GetApplicationLogsReply {
    string time = 1;
    string pod = 2;
    string message = 3;
}

message GetApplicationStatusRequest {
    string id = 1;
    string deploymentId = 2;
    string name = 3;
}

message GetApplicationStatusReply {
    ApplicationStatus status = 1;
}
